complete desktop view and project, README not done

--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
         </div>
     </main>
 
-    <!-- <footer>
+    <footer>
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
         Coded by <a href="https://www.frontendmentor.io/profile/AntonioMereu" target="_blank">Antonio Mereu</a>.
-    </footer> -->
+    </footer>
 </body>
 
 </html>
